test/resources/parser/failing/testOperandVal3.scala
object ValAsCompareOperand {
  10 < val z: Int = 20; z
}